[gd_scene load_steps=3 format=2]

[ext_resource path="res://Debug/Debug.theme" type="Theme" id=1]
[ext_resource path="res://Debug/Debug Menu.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1079.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer"]
margin_left = 460.0
margin_top = 139.0
margin_right = 1460.0
margin_bottom = 939.0
rect_min_size = Vector2( 1000, 800 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Variables" type="VBoxContainer" parent="CenterContainer/ScrollContainer"]
margin_right = 842.0
margin_bottom = 765.0

[node name="Strength" type="HBoxContainer" parent="CenterContainer/ScrollContainer/Variables"]
margin_right = 842.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="CenterContainer/ScrollContainer/Variables/Strength"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 30 )
theme = ExtResource( 1 )
text = "Strength:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/ScrollContainer/Variables/Strength"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 91.0
rect_min_size = Vector2( 400, 30 )
theme = ExtResource( 1 )
expand_to_text_length = true
placeholder_text = "Not available"

[node name="Button" type="Button" parent="CenterContainer/ScrollContainer/Variables/Strength"]
margin_left = 608.0
margin_right = 808.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 30 )
hint_tooltip = "Deletes the Value from the savefile, thus recreating it with its default value."
theme = ExtResource( 1 )
text = "Delete"

[node name="Rank" type="HBoxContainer" parent="CenterContainer/ScrollContainer/Variables"]
margin_top = 95.0
margin_right = 842.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="CenterContainer/ScrollContainer/Variables/Rank"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 30 )
theme = ExtResource( 1 )
text = "Rank:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/ScrollContainer/Variables/Rank"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 91.0
rect_min_size = Vector2( 400, 30 )
theme = ExtResource( 1 )
expand_to_text_length = true
placeholder_text = "Not available"

[node name="Button" type="Button" parent="CenterContainer/ScrollContainer/Variables/Rank"]
margin_left = 608.0
margin_right = 808.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 30 )
hint_tooltip = "Deletes the Value from the savefile, thus recreating it with its default value."
theme = ExtResource( 1 )
text = "Delete"

[node name="Attacks" type="HBoxContainer" parent="CenterContainer/ScrollContainer/Variables"]
margin_top = 190.0
margin_right = 842.0
margin_bottom = 281.0

[node name="Label" type="Label" parent="CenterContainer/ScrollContainer/Variables/Attacks"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 30 )
theme = ExtResource( 1 )
text = "Attacks:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/ScrollContainer/Variables/Attacks"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 91.0
rect_min_size = Vector2( 400, 30 )
theme = ExtResource( 1 )
expand_to_text_length = true
placeholder_text = "Not available"

[node name="Button" type="Button" parent="CenterContainer/ScrollContainer/Variables/Attacks"]
margin_left = 608.0
margin_right = 808.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 30 )
hint_tooltip = "Deletes the Value from the savefile, thus recreating it with its default value."
theme = ExtResource( 1 )
text = "Delete"

[node name="Lab Points" type="HBoxContainer" parent="CenterContainer/ScrollContainer/Variables"]
margin_top = 285.0
margin_right = 842.0
margin_bottom = 376.0

[node name="Label" type="Label" parent="CenterContainer/ScrollContainer/Variables/Lab Points"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 30 )
theme = ExtResource( 1 )
text = "Lab Points:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/ScrollContainer/Variables/Lab Points"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 91.0
rect_min_size = Vector2( 400, 30 )
theme = ExtResource( 1 )
expand_to_text_length = true
placeholder_text = "Not available"

[node name="Button" type="Button" parent="CenterContainer/ScrollContainer/Variables/Lab Points"]
margin_left = 608.0
margin_right = 808.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 30 )
hint_tooltip = "Deletes the Value from the savefile, thus recreating it with its default value."
theme = ExtResource( 1 )
text = "Delete"

[node name="Upgraded" type="HBoxContainer" parent="CenterContainer/ScrollContainer/Variables"]
margin_top = 380.0
margin_right = 842.0
margin_bottom = 471.0

[node name="Label" type="Label" parent="CenterContainer/ScrollContainer/Variables/Upgraded"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 30 )
theme = ExtResource( 1 )
text = "Upgraded:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/ScrollContainer/Variables/Upgraded"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 91.0
rect_min_size = Vector2( 400, 30 )
theme = ExtResource( 1 )
expand_to_text_length = true
placeholder_text = "Not available"

[node name="Button" type="Button" parent="CenterContainer/ScrollContainer/Variables/Upgraded"]
margin_left = 608.0
margin_right = 808.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 30 )
hint_tooltip = "Deletes the Value from the savefile, thus recreating it with its default value."
theme = ExtResource( 1 )
text = "Delete"

[node name="Volume1" type="HBoxContainer" parent="CenterContainer/ScrollContainer/Variables"]
margin_top = 475.0
margin_right = 842.0
margin_bottom = 566.0

[node name="Label" type="Label" parent="CenterContainer/ScrollContainer/Variables/Volume1"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 30 )
theme = ExtResource( 1 )
text = "Volume1:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/ScrollContainer/Variables/Volume1"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 91.0
rect_min_size = Vector2( 400, 30 )
theme = ExtResource( 1 )
expand_to_text_length = true
placeholder_text = "Not available"

[node name="Button" type="Button" parent="CenterContainer/ScrollContainer/Variables/Volume1"]
margin_left = 608.0
margin_right = 808.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 30 )
hint_tooltip = "Deletes the Value from the savefile, thus recreating it with its default value."
theme = ExtResource( 1 )
text = "Delete"

[node name="Volume2" type="HBoxContainer" parent="CenterContainer/ScrollContainer/Variables"]
margin_top = 570.0
margin_right = 842.0
margin_bottom = 661.0

[node name="Label" type="Label" parent="CenterContainer/ScrollContainer/Variables/Volume2"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 30 )
theme = ExtResource( 1 )
text = "Volume2:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/ScrollContainer/Variables/Volume2"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 91.0
rect_min_size = Vector2( 400, 30 )
theme = ExtResource( 1 )
expand_to_text_length = true
placeholder_text = "Not available"

[node name="Button" type="Button" parent="CenterContainer/ScrollContainer/Variables/Volume2"]
margin_left = 608.0
margin_right = 808.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 30 )
hint_tooltip = "Deletes the Value from the savefile, thus recreating it with its default value."
theme = ExtResource( 1 )
text = "Delete"

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/ScrollContainer/Variables"]
margin_top = 665.0
margin_right = 842.0
margin_bottom = 765.0

[node name="Save" type="Button" parent="CenterContainer/ScrollContainer/Variables/Buttons"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 1 )
text = "Save"

[node name="Quit" type="Button" parent="CenterContainer/ScrollContainer/Variables/Buttons"]
margin_left = 204.0
margin_right = 518.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 1 )
text = "Quit to main menu"

[node name="Reset" type="Button" parent="CenterContainer/ScrollContainer/Variables/Buttons"]
margin_left = 522.0
margin_right = 842.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 1 )
text = "Reset to Defaults"

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ConfirmationDialog" type="AcceptDialog" parent="Popup"]
margin_right = 200.0
margin_bottom = 70.0
window_title = "Error"
resizable = true
dialog_text = "One value is invalid!"
[connection signal="pressed" from="CenterContainer/ScrollContainer/Variables/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="CenterContainer/ScrollContainer/Variables/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CenterContainer/ScrollContainer/Variables/Buttons/Reset" to="." method="_on_Reset_pressed"]
